# 3es-core

./: .clang-format  .clang-tidy  .gitignore  3es.natvis  CMakeLists.txt  LICENSE.txt  readme.md  todo.md  vcpkg.json
3es-core/: 3es-core.in.h  3esassertrange.h  3esbounds.cpp  3esbounds.h  3escollatedpacket.cpp  3escollatedpacket.h  3escollatedpacketdecoder.cpp  3escollatedpacketdecoder.h  3escolour.cpp  3escolour.h  3escompressionlevel.h  3esconnection.h  3esconnectionmonitor.h  3escoreutil.cpp  3escoreutil.h  3escrc.cpp  3escrc.h  3esdatabuffer.cpp  3esdatabuffer.h  3esdatabuffer.inl  3esendian.cpp  3esendian.h  3esexception.cpp  3esfeature.cpp  3esfeature.h  3esintarg.h  3eslog.h  3esmathsmanip.cpp  3esmathsmanip.h  3esmathsstream.h  3esmatrix3.cpp  3esmatrix3.h  3esmatrix3.inl  3esmatrix4.cpp  3esmatrix4.h  3esmatrix4.inl  3esmeshmessages.h  3esmessages.cpp  3esmessages.h  3esmeta.h  (+53 more)
3es-core/3es-doc/: 3esdocbuilding.h  3esdocfileformat.h  3esdoclicense.h  3esdocmain.h  3esdocprotocol.h  3esdocusage.h
3es-core/cmake/: doxygen.cmake
3es-core/nix/: 3esdebug.cpp
3es-core/private/: 3esbaseconnection.cpp  3esbaseconnection.h  3escollatedpacketzip.cpp  3escollatedpacketzip.h  3esfileconnection.cpp  3esfileconnection.h  3estcpconnection.cpp  3estcpconnection.h  3estcpconnectionmonitor.cpp  3estcpconnectionmonitor.h  3estcpserver.cpp  3estcpserver.h
3es-core/qt/: 3estcplistensocket.cpp
3es-core/shapes/: 3esarrow.cpp  3esarrow.h  3esbox.h  3escapsule.cpp  3escapsule.h  3escone.cpp  3escone.h  3escylinder.cpp  3escylinder.h  3esid.h  3esidcat.h  3esmeshplaceholder.cpp  3esmeshplaceholder.h  3esmeshresource.cpp  3esmeshresource.h  3esmeshset.cpp  3esmeshset.h  3esmeshshape.cpp  3esmeshshape.h  3esmultishape.cpp  3esmultishape.h  3esmutablemesh.cpp  3esmutablemesh.h  3esplane.cpp  3esplane.h  3espointcloud.cpp  3espointcloud.h  3espointcloudshape.cpp  3espointcloudshape.h  (+15 more)
3es-view/: CMakeLists.txt
3escore/: 3esassertrange.h  3esbounds.h  3escollatedpacket.cpp  3escollatedpacket.h  3escollatedpacketdecoder.h  3escolour.h  3esconnection.h  3esconnectionmonitor.h  3escoordinateframe.h  3escoredoc.h  3escoreutil.h  3escrc.h  3esdatabuffer.h  3esdebug.h  3esendian.h  3esexception.h  3esfeature.h  3esintarg.h  3eslog.cpp  3eslog.h  3esmathsmanip.h  3esmathsstream.h  3esmatrix3.h  3esmatrix4.cpp  3esmatrix4.h  3esmeshmessages.h  3esmessages.h  3espacketbuffer.cpp  3espacketbuffer.h  3espacketheader.h  3espacketreader.h  3espacketstream.h  3espacketstreamreader.h  3espacketwriter.h  3esquaternion.h  3esquaternionarg.h  3esresource.h  3esresourcepacker.h  3esrotation.h  3esserver.h  (+122 more)
3escore/3es-doc/: 3esdocbuilding.h  3esdocfileformat.h  3esdocthirdparty.h  3esdocviewer.h  3esplugins.h
3escore/3esdoc/: 3esdocbuilding.md  3esdocfileformat.md  3esdoclicense.md  3esdocmain.h  3esdocogranisation.md  3esdocprotocol.md  3esdocthirdparty.md  3esdocusage.md  3esdocviewer.md  3esplugins.md  doxyfile.in
3escore/3esdoc/images/: csharplibs.dot
3escore/cmake/: 3es-config.in.cmake  3es-version.cmake
3escore/nix/: Debug.cpp
3escore/private/: 3escollatedpacketzip.h  3estcpconnection.cpp  3estcpserver.cpp  BaseConnection.cpp  BaseConnection.h  CollatedPacketZip.cpp  CollatedPacketZip.h  FileConnection.cpp  FileConnection.h  TcpConnection.cpp  TcpConnection.h  TcpConnectionMonitor.cpp  TcpConnectionMonitor.h  TcpServer.cpp  TcpServer.h
3escore/qt/: 3estcpdetail.h  3estcpsocket.cpp  TcpDetail.h  TcpListenSocket.cpp  TcpSocket.cpp
3escore/shapes/: 3esarrow.h  3esbox.h  3escapsule.h  3escone.h  3escylinder.h  3esid.h  3esmeshplaceholder.h  3esmeshresource.h  3esmeshset.h  3esmeshshape.h  3esmultishape.cpp  3esmultishape.h  3esmutablemesh.cpp  3esmutablemesh.h  3esplane.h  3espointcloud.h  3espointcloudshape.h  3espose.h  3esquatarg.h  3esshape.h  3essimplemesh.cpp  3essimplemesh.h  3essphere.h  3esstar.h  3estext2d.h  3estext3d.cpp  3estext3d.h  Arrow.cpp  Arrow.h  Box.cpp  Box.h  Capsule.cpp  Capsule.h  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Id.h  MeshPlaceholder.cpp  MeshPlaceholder.h  (+37 more)
3escore/tcp/: 3estcpbase.cpp  3estcpbase.h  3estcpdetail.h  TcpBase.cpp  TcpBase.h  TcpDetail.h  TcpListenSocket.cpp  TcpSocket.cpp
3escore/tessellate/: 3esarrow.h  3esbox.h  3escapsule.cpp  3escapsule.h  3escone.h  3escylinder.h  3essphere.h  Arrow.cpp  Arrow.h  Box.cpp  Box.h  Capsule.cpp  Capsule.h  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Sphere.cpp  Sphere.h
3escore/win/: Debug.cpp
3esview/: CMakeLists.txt
cmake/: 3esTarget.cmake  compilerSetup.cmake
examples/: CMakeLists.txt
examples/3es-occupancy/: 3es-occupancy.cpp  3es-occupancy.h  CMakeLists.txt  DebugIds.h  Occupancy.cpp  OccupancyMesh.cpp  OccupancyMesh.h  occupancyloader.cpp  occupancyloader.h  occupancymesh.cpp  occupancymesh.h  p2p.h
examples/3esOccupancy/: CMakeLists.txt  Occupancy.cpp  Occupancy.h  OccupancyLoader.cpp  OccupancyLoader.h  OccupancyMesh.cpp  OccupancyMesh.h  p2p.h
test/: CMakeLists.txt
test/3est-bandwidth/: 3est-bandwidth.cpp  CMakeLists.txt
test/3est-primitive-server/: 3es-primitive-server.cpp  CMakeLists.txt
test/3est-server/: 3es-server-test.cpp  CMakeLists.txt
test/3est-shapes/: 3est-shapes.cpp
test/3est-tessellate/: 3es-tessellate.cpp  CMakeLists.txt
test/3est-unit/: 3est-collate.cpp  3est-common.cpp  3est-common.h  3est-core.cpp  3est-databuffer.cpp  3est-shapes.cpp  3est-vertexbuffer.cpp  CMakeLists.txt  TestShapes.cpp
test/3est-viewer/: 3est-shapes.cpp  3est-util.cpp  CMakeLists.txt
test/3estBandwidth/: Bandwidth.cpp  CMakeLists.txt
test/3estPrimitiveServer/: CMakeLists.txt  PrimitiveServer.cpp
test/3estServer/: ServerTest.cpp
test/3estTessellate/: Tessellate.cpp
test/3estUnit/: CMakeLists.txt  TestCollate.cpp  TestCommon.cpp  TestCommon.h  TestCore.cpp  TestDataBuffer.cpp  TestShapes.cpp  TestStream.cpp
test/3estViewer/: CMakeLists.txt  TestShapes.cpp  TestUtil.cpp  TestViewer.cpp  TestViewer.h  TestViewerConfig.in.h
utils/: CMakeLists.txt
utils/3esrec/: 3esframedisplay.cpp  3esframedisplay.h  3esrec.cpp  CMakeLists.txt  FrameDisplay.cpp  FrameDisplay.h  Rec.cpp
(+399 files in other folders)
